yaml/assets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: assets
  name: assets
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: assets
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: assets
    spec:
      containers:
        - image: 10.230.7.2/yg-dmz-ns/assets:latest
          name: assets
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: "/home/node/app/.env.production"
              subPath: .env.production
              name: env-configmap-volume
      volumes:
        - name: env-configmap-volume
          configMap:
            name: env-configmap


      imagePullSecrets:
        - name: yg-dmz-ns-assets-image-pull-secret
      restartPolicy: Always
status: {}
