yaml/assets-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: assets-netpol
  namespace: assets
spec:
  podSelector:
    matchLabels:
      io.kompose.service: assets
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 3000
    - port: 443
      protocol: TCP
  egress:
  - to:
    ports:
    - port: 53
      protocol: UDP
    - port: 1433
      protocol: TCP
    - port: 443
      protocol: TCP
